changed homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kudou-reira.github.io/art_blog",
+  "homepage": "https://kudou-reira.github.io/portfolio",
   "name": "art_site",
   "version": "0.1.0",
   "private": true,
