--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "0.20.0",
     "customize-cra": "1.0.0",
     "lodash": "4.17.20",
+    "mdx.macro": "0.2.9",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-redux": "7.2.1",
@@ -21,7 +23,9 @@
     "react-scripts": "^3.4.3",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "mdx-loader": "3.0.2",
+    "react-player": "2.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
