--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
     "axios": "0.20.0",
     "customize-cra": "1.0.0",
     "lodash": "4.17.20",
+    "mdx-loader": "3.0.2",
     "mdx.macro": "0.2.9",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.13.1",
+    "react-images": "^1.1.7",
     "react-markdown": "^4.3.1",
+    "react-photo-gallery": "^8.0.0",
+    "react-player": "2.6.2",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^3.4.3",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0",
-    "mdx-loader": "3.0.2",
-    "react-player": "2.6.2"
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
